<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@color/colorAccentFragment">

    </FrameLayout>

    <Button
        android:id="@+id/btnAddOne"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorAccent1"
        android:text="@string/addBtn1"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAddTwo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorAccent2"
        android:text="@string/addBtn2"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAddThree"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorAccent50"
        android:text="@string/addBtn3"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnReplace"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorAccent4"
        android:text="@string/replaceBtn"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRemove"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorAccent5"
        android:text="@string/removeBtn"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>